src/test/ui/consts/const-eval/const_panic_track_caller.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic_track_caller.rs:16:5
   |
LL |     b()
   |     ^^^
   |     |
   |     the evaluated program panicked at 'hey', $DIR/const_panic_track_caller.rs:16:5
   |     inside `c` at $DIR/const_panic_track_caller.rs:16:5
...
LL | const X: u32 = c();
   |                --- inside `X` at $DIR/const_panic_track_caller.rs:22:16

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
